--- a/.netlify/netlify.toml
+++ b/.netlify/netlify.toml
@@ -1,31 +1,128 @@
+headersOrigin = "config"
+redirectsOrigin = "config"
 plugins = []
-headers = []
 
 [functions]
 
 [functions."*"]
 
 [build]
-publish = "/home/ricky/Desktop/anchorstack-site"
-publishOrigin = "ui"
+publish = "/home/ricky/Desktop/anchorstack-site/dist"
+publishOrigin = "config"
+commandOrigin = "config"
+command = "npm run build"
 
 [build.environment]
+NODE_VERSION = "18"
 
 [build.processing]
+skip_processing = false
 
 [build.processing.css]
+bundle = true
+minify = true
 
 [build.processing.html]
+pretty_urls = true
 
 [build.processing.images]
 
 [build.processing.js]
+bundle = true
+minify = true
 
 [build.services]
 
+[[headers]]
+for = "/*"
+
+[headers.values]
+X-Frame-Options = "DENY"
+X-XSS-Protection = "1; mode=block"
+X-Content-Type-Options = "nosniff"
+Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+for = "/assets/*"
+
+[headers.values]
+Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "*.js"
+
+[headers.values]
+Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "*.css"
+
+[headers.values]
+Cache-Control = "public, max-age=31536000, immutable"
+
+[[redirects]]
+from = "/subscribe"
+to = "/vault"
+status = 301.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
+[[redirects]]
+from = "/mid"
+to = "/vault"
+status = 301.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
+[[redirects]]
+from = "/top"
+to = "/vault"
+status = 301.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
+[[redirects]]
+from = "/free"
+to = "/vault"
+status = 301.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
+[[redirects]]
+from = "/shop"
+to = "/vault"
+status = 301.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
 [[redirects]]
 from = "/focus"
-to = "https://grafixartistry6.gumroad.com/l/npruu"
+to = "/vault"
 status = 301.0
 force = false
 
@@ -37,7 +134,7 @@ force = false
 
 [[redirects]]
 from = "/clarity"
-to = "https://grafixartistry6.gumroad.com/l/nupwf"
+to = "/vault"
 status = 301.0
 force = false
 
@@ -48,8 +145,32 @@ force = false
 [redirects.headers]
 
 [[redirects]]
-from = "/core"
-to = "https://grafixartistry6.gumroad.com/l/msenf"
+from = "/drops"
+to = "https://rickyjarnagin.substack.com/"
+status = 302.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
+[[redirects]]
+from = "/updates"
+to = "https://rickyjarnagin.substack.com/"
+status = 302.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
+[[redirects]]
+from = "/clarity-blueprint"
+to = "https://grafixartistry6.gumroad.com/l/eylhzc"
 status = 301.0
 force = false
 
@@ -60,8 +181,8 @@ force = false
 [redirects.headers]
 
 [[redirects]]
-from = "/masterbundle"
-to = "https://grafixartistry6.gumroad.com/l/gxpksf"
+from = "/founder-invite"
+to = "https://grafixartistry6.gumroad.com/l/jqzdtq"
 status = 301.0
 force = false
 
@@ -72,8 +193,20 @@ force = false
 [redirects.headers]
 
 [[redirects]]
-from = "/worklife"
-to = "https://grafixartistry6.gumroad.com/l/lapqw"
+from = "/product-sprint"
+to = "https://grafixartistry6.gumroad.com/l/xlbheu"
+status = 301.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
+
+[[redirects]]
+from = "/focus-vault"
+to = "https://grafixartistry6.gumroad.com/l/npruu"
 status = 301.0
 force = false
 
@@ -96,56 +229,8 @@ force = false
 [redirects.headers]
 
 [[redirects]]
-from = "/blueprint"
-to = "https://grafixartistry6.gumroad.com/l/eylhzc"
-status = 301.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/combopack"
-to = "https://grafixartistry6.gumroad.com/l/jqzdtq"
-status = 301.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/drops"
-to = "https://rickyjarnagin.substack.com"
-status = 302.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/vault-news"
-to = "https://rickyjarnagin.substack.com"
-status = 302.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/vault"
-to = "/vault/index.html"
+from = "/ava"
+to = "https://ava.anchorstack.pro"
 status = 200.0
 force = false
 
@@ -156,9 +241,9 @@ force = false
 [redirects.headers]
 
 [[redirects]]
-from = "/focus-substack"
-to = "https://grafixartistry6.gumroad.com/l/npruu?utm_source=substack&utm_campaign=vault_june"
-status = 302.0
+from = "/tools"
+to = "https://tools.anchorstack.pro"
+status = 200.0
 force = false
 
 [redirects.query]
@@ -168,10 +253,10 @@ force = false
 [redirects.headers]
 
 [[redirects]]
-from = "/subscribe"
-to = "/vault"
-status = 301.0
-force = true
+from = "/creator"
+to = "https://creator.anchorstack.pro"
+status = 200.0
+force = false
 
 [redirects.query]
 
@@ -180,46 +265,10 @@ force = true
 [redirects.headers]
 
 [[redirects]]
-from = "/mid"
-to = "/vault"
-status = 301.0
-force = true
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/free"
-to = "/vault"
-status = 301.0
-force = true
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/about"
-to = "/vault"
-status = 301.0
-force = true
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/welcome"
-to = "/welcome/"
-status = 301.0
-force = true
+from = "/*"
+to = "/index.html"
+status = 200.0
+force = false
 
 [redirects.query]
 
